--- a/respo/application-dev.yml
+++ b/respo/application-dev.yml
@@ -1,10 +1,10 @@
 spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
+    url: jdbc:mysql://rm-bp1d3ra3968332d9ixo.mysql.rds.aliyuncs.com:3306/navytest?characterEncoding=utf8&useSSL=false
+    username: pmptest
+    password: zkdj_yqgj2)!&
     hikari:
-      jdbc-url: jdbc:mysql://rm-bp1d3ra3968332d9ixo.mysql.rds.aliyuncs.com:3306/navytest?characterEncoding=utf8&useSSL=false
-      username: pmptest
-      password: zkdj_yqgj2)!&
       minimum-idle: 5
       maximum-pool-size: 15
       auto-commit: true
